--- a/backend/package.json
+++ b/backend/package.json
@@ -11,12 +11,12 @@
     "cdk": "cdk"
   },
   "devDependencies": {
-    "@aws-cdk/assert": "1.49.1",
+    "@aws-cdk/assert": "1.89.0",
     "@types/jest": "^25.2.1",
     "@types/node": "10.17.5",
     "@typescript-eslint/eslint-plugin": "^3.6.1",
     "@typescript-eslint/parser": "^3.6.1",
-    "aws-cdk": "1.49.1",
+    "aws-cdk": "1.89.0",
     "eslint": "^7.5.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.4",
@@ -27,10 +27,10 @@
     "typescript": "~3.7.2"
   },
   "dependencies": {
-    "@aws-cdk/aws-apigateway": "^1.52.0",
-    "@aws-cdk/aws-dynamodb": "^1.52.0",
-    "@aws-cdk/aws-lambda": "^1.52.0",
-    "@aws-cdk/core": "1.52.0",
+    "@aws-cdk/aws-apigateway": "~1.89.0",
+    "@aws-cdk/aws-dynamodb": "~1.89.0",
+    "@aws-cdk/aws-lambda": "~1.89.0",
+    "@aws-cdk/core": "1.89.0",
     "source-map-support": "^0.5.16"
   }
 }
